--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.4.0",
+        "gh-pages": "^5.0.0",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -38,5 +39,5 @@
             "last 1 safari version"
         ]
     },
-    "homepage": "https://github.com/Roronoawjd/movie_app_2023"
+    "homepage": "https://Roronoawjd.github.io/movie_app_2023"
 }
